[package]
authors = ["Mark LeMoine <linclelinkpart5@gmail.com>"]
edition = "2018"
name = "marktag"
version = "0.2.6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs1770 = { git = "https://github.com/ruuda/bs1770", rev = "d369360aad754f25ea94c4b6a5c2e58ef38b9ac8" }
clap = { version = "4", features = ["derive"] }
claxon = "0.4"
metaflac = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"

[dev-dependencies]
big_s = "1"
maplit = "1"
